Add adminer + Basic UI for the moderation hierarchy setting
